# kfe

./: .gitignore  README.md  idea.md  install.sh
backend/: Makefile  README.md  db.py  main.py  model.py  pyproject.toml  requirements.txt  schema.json
backend/kfe/: dependencies.py  directory_context.py  main.py  schema.json
backend/kfe/dtos/: response.py
backend/kfe/endpoints/: directories.py  load.py
backend/kfe/features/: transcriber.py  vision_lm_engine.py
backend/kfe/persistence/: embeddings.py  file_metadata_repository.py
backend/kfe/service/: embedding_processor.py  metadata_editor.py  search.py  vision_lm_service.py
backend/kfe/utils/: constants.py  init_progress_tracker.py  model_manager.py
backend/src/: dependencies.py  directory_context.py  main.py  schema.json  skonrad.db
backend/src/dtos/: mappers.py  request.py  response.py
backend/src/endpoints/: access.py  directories.py  events.py  load.py  metadata.py
backend/src/features/: clip_engine.py  image_embedding_engine.py  ocr_engine.py  text_embedding_engine.py  transcriber.py
backend/src/finetuning/: evaluate_speech_model.ipynb  prepare_speech_dataset.ipynb  speech.ipynb
backend/src/persistence/: db.py  directory_repository.py  embeddings.py  file_metadata_repository.py  model.py
backend/src/search/: embedding_engine.py  embedding_similarity_calculator.py  image_embedding_engine.py  lemmatizer.py  lexical_search_engine.py  models.py  multi_embedding_similarity_calculator.py  query_parser.py  reverse_index.py  text_embedding_engine.py  token_stat_counter.py  tokenizer.py
(+61 files in other folders)
